charts/rbac-best-practices/pols/disable-automount-sa-token.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disable-automount-sa-token
  annotations:
    policies.kyverno.io/title: Disable automountServiceAccountToken
    policies.kyverno.io/category: RBAC Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: ServiceAccount
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.21"
    policies.kyverno.io/description: >-
      A new ServiceAccount called `default` is created whenever a new Namespace is created.
      Pods spawned in that Namespace, unless otherwise set, will be assigned this ServiceAccount.
      This policy mutates any new `default` ServiceAccounts to disable auto-mounting of the token
      into Pods obviating the need to do so individually.      
spec:
  rules:
  - name: disable-automountserviceaccounttoken
    match:
      any:
      - resources:
          kinds:
          - ServiceAccount
          names:
          - default
    mutate:
      patchStrategicMerge:
        automountServiceAccountToken: false
